--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!doctype html><html lang="en"><head><meta property="og:title" content="The Rock" />
+<!doctype html><html lang="en"><head><meta name="google-site-verification" content="......." />
+<meta property="og:title" content="The Rock" />
 <meta property="og:type" content="video.movie" />
 <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
 <meta property="og:image" content="https://www.timeoutdubai.com/cloud/timeoutdubai/2021/09/11/udHvbKwV-IMG-Dubai-UAE-1.jpg" /><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3496380401689227"
