--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta name="google-site-verification" content="......." />
+<!doctype html><html lang="en"><head><meta name="google-site-verification" content="googlec2359f2464d6adc4" />
 <meta property="og:title" content="The Rock" />
 <meta property="og:type" content="video.movie" />
 <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
